Documentation, consistency, and code health